# Energy_Market_Forecasting

./: .gitignore  README.md  hourly_energy_demand_forecasting.ipynb  optuna_block_lstm.db  optuna_block_lstm_v2.db  optuna_xgb_price_v2.db  pyproject.toml
runs/block_lstm_final/checkpoints/: last-epoch=79.ckpt
runs/block_lstm_final/logs/: events.out.tfevents.1762793709.vm-ml-test.589858.66  events.out.tfevents.1762794020.vm-ml-test.589858.67  events.out.tfevents.1762794150.vm-ml-test.589858.68  events.out.tfevents.1762798238.vm-ml-test.674439.0  events.out.tfevents.1762798504.vm-ml-test.674439.1  events.out.tfevents.1762798575.vm-ml-test.674439.2  events.out.tfevents.1762818441.vm-ml-test.776420.40  events.out.tfevents.1762818626.vm-ml-test.776420.41  events.out.tfevents.1762997054.vm-ml-test.1926944.45  events.out.tfevents.1762997077.vm-ml-test.1926944.46  hparams.yaml
runs/block_lstm_final_20251114-210939/logs/: events.out.tfevents.1763154964.vm-ml-test.2837373.12  events.out.tfevents.1763154972.vm-ml-test.2837373.13  events.out.tfevents.1763154973.vm-ml-test.2837373.14  hparams.yaml
runs/block_lstm_final_prob_20251114-210939/logs/: events.out.tfevents.1763154981.vm-ml-test.2837373.15  events.out.tfevents.1763154990.vm-ml-test.2837373.16  hparams.yaml
runs/lstm_tv_20251114-235635_W168_hd256_L2_do0.1_bs512_lr0.00143275_wd8.0684e-05/logs/: events.out.tfevents.1763164595.vm-ml-test.2847779.1  events.out.tfevents.1763164643.vm-ml-test.2847779.2  hparams.yaml
runs/lstm_tv_prob_20251115-002138_W168_hd256_L2_do0.1_bs512_lr0.00143275_wd8.0684e-05/logs/: events.out.tfevents.1763166098.vm-ml-test.2847779.3  hparams.yaml  (+3 more)
src/time_series_training/: __init__.py
(+60 files in other folders)
