[project]
name = "time-series-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jackson Han", email = "128627217+Jackson00Han@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "darts>=0.36.0",
    "holidays>=0.84",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "optuna-integration[pytorch-lightning]>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pytorch-lightning>=2.5.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "rpds-py<0.29.0",
    "tensorboard>=2.20.0",
]

[project.scripts]
time-series-training = "time_series_training:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
